Bug 419143 - Ignore thread filter action doesn't. r=bienvenu, sr=bienvenu